Fix scrollbar showing when not needed

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
 }
 body{
+  width: calc(100vw - 34px);
   background-color:rgb(140, 173, 211);
 }
 
@@ -11,7 +12,7 @@ body{
 }
 
 html{
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .logocontainer{
@@ -37,6 +38,9 @@ html{
 }
 
 @media (max-width:850px){
+  body{
+    padding-left: 8px;
+  }
   .logocontainer{
     font-size:40px;
   }
